# ENN--Evolutionary-Neural-Network-

./: .gitignore  .gitmodules  CMakeLists.txt  imgui.ini  readme.md
shaders/: circle_fragment.glsl  circle_vertex.glsl  compute_shader.glsl  constraint_compute_shader.glsl  constraint_fragment_shader.glsl  constraint_vertex_shader.glsl  fragment.glsl  line_fragment.glsl  line_vertex.glsl  object_compute_shader.glsl  object_fragment_shader.glsl  object_vertex_shader.glsl  old_compute_shader.glsl  point_fragment.glsl  point_vertex.glsl  vertex.glsl
shaders/compute_shader/: constraint.glsl  initial.glsl  object.glsl  position.glsl  velocity.glsl
src/: NN.cpp  NN.h  camera.h  gpu_physics.cpp  gpu_physics.h  imgui_helper.cpp  imgui_helper.h  main.cpp  physics.h  renderable.h  renderer2d.cpp  renderer2d.h  shader.h  window.cpp  window.h
